--- a/_posts/2019-06-03-bcl-51attack.markdown
+++ b/_posts/2019-06-03-bcl-51attack.markdown
@@ -195,11 +195,46 @@ getblock 000000002b7ad68e8528c20ec8bc8366cdd9a8c2db2b4050e0c9f2c9e39603b0
 
 ## 3、确认全网同步区块数据
 
-因为BCH原链节点数不多，节点的同步时间从数分钟到数小时不等
-
+因为BCH原链节点数不多，节点的同步时间从数分钟到数小时不等。手动addnode进行“握手”，让没有同步的节点尽快同步。
+![图片描述](https://bitcoincashcn.github.io/pic/newsync.PNG)
 
 # 四、关于博弈和经济学意义
 
+## 1、区块链=治理
+
+在详细了解51％的攻击之前，重要的是要了解区块链协议基本上是一种治理形式。区块链管理数据的分类帐，例如交易数据。由于区块链协议可以为我们管理，我们不再需要第三方来执行此操作，例如政府或银行。这就是（大多数）区块链去中心化的原因。比特币区块链的协议基于民主自治制度，这意味着网络上的大多数参与者（矿工）将决定哪种版本的区块链代表真相。
+
+去中心化的民主是什么？这就是一个具体的例子，由数学决定一切，没有任何中间人。传统的民主代议制度，不是基于数学的，而是用选举、代理人、议会、行政、司法分权等各种系统和制度来运行，中间有大量的人为因素。而比特币的治理模式非常简单，只有一条最基本的原则，即数学至上，没有任何其它的人为规则，而这也就杜绝了一切的作弊可能性。从比特币的角度，是不存在所谓诚实链和攻击链的，这是我们人为的主观定义，它很简单，算力最强的链条是数学上证明安全级别最强的，代码会自动选择它，不需要说明。
+
+所谓的51%攻击，也只是我们人为的定义，比特币并不需要防范这种情况，它是符合比特币追随最强者的顶层原则的，这种制度恰恰构成了比特币的核心价值，是非常理性的。
+
+好的制度是追求优胜劣汰，而不是反向的劣币驱逐优币，现实的复杂的制度往往存在这种情况，是逆进化论的。比特币的基于数学的治理.没有九九八十一条人为的法律、法规，可谓简单而粗暴，但却是绝对的有效。
+
+## 2、挖矿经济学
+
+挖矿是用算力去挖“币”，本质上，等同于矿工付出了电费、设备成本去兑换了挖出来的币。假设矿工花了1块钱去挖了1个币，也就是矿工认可用1块钱去买一个币的市场价格，而当一个币在市场上的价格为2元时，矿工是不大可能花一块钱就能挖到1个币的，因为那个时候，会有人投资挖矿，然后把这个币卖出去赚钱，直到挖矿的成本和市场的价格相当接近。因为挖矿是一种纯粹的数学，没有门槛，也没有限制任何人参与，是完全市场化的。所以，挖矿的成本等于币的市场价。
+
+从矿工的角度，虽然期望越低的成本挖到越多的币，但是在公开竞争的情况下，他买不到跟市场价差别太大的币。比特币最早几分钱一个，用电脑就能挖，最早挖矿的成本是比特币启动的市场定价，越容易挖，则卖出的价格越低，卖出去的价格越低则越容易挖，反之亦然。
+
+51%攻击实践揭示了一点，没收其他人的币，成本会高于其他人挖矿的成本，比特币没有情感，谁给的钱多，它就属于谁，这个规则是公开公平的，对中本聪也没有例外。
+
+## 3、矿工博弈
+
+从以上51%攻击我们可以看到，矿工付出成本去“买”币，其实有两种选择，其一，挖私链，并让其成为公链；其二，挖公链。第一种情况，是矿工要占有100%的挖矿产出，而第二种情况，则是与其它矿工合作，联合起来强化链条的安全门槛。挖矿是一种自私的行为，矿工基于利益最大化进行选择，100%的矿工其实都有动机进行51%挖矿（私链），因为100%的矿工有这种动机，且挖矿算法是公开的情况下，矿工会意识到自身无法保证自身挖出来的币的安全，矿工反倒有可能倾向于合作，合作的动机与其占有全网算力的比率成正比，也就是其占有99%的算力，那么挖私链的动机就会上升到99%，代表受到惩罚的风险越低。而其算力比率较低，则会因为挖私链失败导致颗粒无收，相当受到了处罚（浪费了成本）。总结来说，矿工是挖矿算法的人格化，其行为完全可以预测及精确计算出来。
+
+在有少量矿工的情况下，假设有一个矿工用很低的算力（成本）挖了一些币，那么覆盖掉这些币的成本也很低，所以，矿工选择用多少成本去挖矿，其实等于给自己的币加上多少安全外壳，当他用一分钱去挖矿的时候，他即使获得了一万个币，但是这一万个币，会被别人用2分钱给干掉的概率很高。犹如本实验干掉了30万个币。
+
+回滚区块的成本完全是可以预测的，因为公开竞争，只要成本可以被覆盖，那么就会发生区块回滚。BCH原链如此，BCH如此，比特币也是如此。如果回滚一个币的成本是一块钱，并获得一个币，那么矿工就给出了一个市场定价为1块钱，当成本超过其所愿意支付的市场定价时，他自然会停止这种挖矿行为。
+
+所以，最后我们要记住一点，在大部分时候花一块钱挖一万个币，跟花一百块钱挖一个币，所得跟币数关系不大，而跟成本有关，今天花五万块钱去挖一个比特币，跟花五万块钱去挖20个BCH，矿工不会有一种错觉，认为后者所得更多。有很多类似的逻辑漏洞，不知道如何区分必要和充分条件，比如一些分叉币发行量只有几千个，然后就敢号称稀缺性导致市场价值更高。有一个比特币矿工花了2万个比特币去购买了两块披萨饼，其实他在干一件让比特币值钱的事情，而不是比特币自己会值钱。如果他不这么干的话，就像今天在这个世界的各个角落，拥有数万个BCH原链币的持有者一样，连2个披萨饼都买不起。写到这，我笑了。
+
+## 4、51%攻击对BCH原链的实际作用
+
+* 算力竞争会导致算力工作量累积越来越高，每次攻击都抬高了chainwork（否则无法成功），安全壁垒不断上升。
+* 每一次攻击等于花费了成本投入了，一个原来一分钱的东西，有人愿意花两分钱去获得，提高了市场定价。
+* 这是论证BCH原链可以覆盖BCH新链的第一步
+* 证明大资本的批量采购在技术上是可行，这提供了一种可能性
+* 矿工的竞争本质还是算力竞争，完全自由的市场竞争有利于去中心化
 
 
 
