--- a/_posts/2019-06-03-bcl-51attack.markdown
+++ b/_posts/2019-06-03-bcl-51attack.markdown
@@ -13,6 +13,10 @@ tags: BCH Clashic BCH原链 操作教程 51%攻击 区块重写
 
 我们大概听说过很多关于黑客进行区块链51％攻击的报道，比如ETC、BTG在2018年前后，都遭受过51%攻击，其中BTG据说被干掉了38万枚交易记录。但是，我们很少能看到攻击的详细操作细节披露，本实验以BCH原链为基础，在真实的全球网络环境下，完全实战了一次51%攻击，本文将会讲解这次实验完整的操作步骤和细节，并且就攻击的博弈和经济学意义做一些分析。
 
+攻击效果截图：
+
+![2018年12月的762048区块](https://bitcoincashcn.github.io/pic/762048-old.PNG)
+
 # 一、实验环境准备
 
 ## 1、物理环境
