--- a/_posts/2019-06-30-bccuahf.markdown
+++ b/_posts/2019-06-30-bccuahf.markdown
@@ -98,3 +98,19 @@ UAHF版本的下载：[Bitcoin Classic](https://github.com/bitcoinclassic/bitcoi
 罗杰本人其实并不完全支持比特币现金，直到后叉。最初，他对Segwit2x抱有希望。他在2017年8月1日关于谁支持比特币现金的文章中明显遗漏了他的名字。仅在Segwit2x于2017年11月8日失败后才开始支持BCH。
 
 另一方面，Craig Wright在早期就赞扬了比特币现金计划，可能主要是因为他出于某种原因讨厌Segwit。但他没有做任何事来帮助创建BCH; 他只是表示赞成它。大多数人并没有认真对待他，但是一个谦虚的少数人很难买到他的叙述。他当时是一名非常小的玩家角色，并一直保持到2018年。
+
+# BCC继续存活的背后推手猜测
+
+BCH在2017年11月15号启动硬分叉，在硬分叉之前其算力高点达到了6E（1E=1000P，1P=1000T）。分叉504032高度块的难度值为522462745900（12位数），这个难度值相对于今天BCH（2019年6月份）的难度值277448758528（12位数），甚至高出接近1倍。
+
+为什么会有矿工继续投入算力挖掘高难度的原链BCC，这是明显的亏钱生意，谁烧掉了价值几十个BTC的算力成本，在3天内，挖掘原链并产出了6个块，BCC得以继续存活下来，产生了比特币创世以来唯一一次原链硬分叉。（原链硬分叉很难发生的主要原因在于巨大的成本门槛）。在挖出六个块之后，从区块记录上看，神秘算力使用单一挖矿地址持续了一个来月，使BCC彻底存活下来之后才撤离。这种情况可以排除矿工忘记切换主网的可能性，因为矿场在分叉前十天开始就已经部署好硬分叉的版本，到时自动激活，切换不会等到硬分叉发生高度，更不会等一个月的时间浪费大量的算力。硬分叉的版本没有发生错误，如果有的话，那么会有大量的矿场没有参与激活新的分叉。神秘算力在公共矿池启动后，确认BCC原链继续存活无误后，撤出算力后，由零散矿工组成的公共矿池在当天继续出块，两者之间的衔接关系很明显，等等这些迹象都排除了矿工忘记切换主网的可能性。
+
+到底是谁，在背后投入巨资算力干了这件事情？到目前为止，仍然是迷雾重重，没有任何力量站出来承认造成此次硬分叉算力的来源。可谓是继中本聪失踪后，比特币历史上一大悬案。我们只能从逻辑和动机分析上做一些不完整的推导。
+
+我们知道BCH的分叉，是有一股反对力量的，比特币社区对BCH的夺名动机一直以来是极尽嘲讽之能事，twitter有段时间是一天一副漫画。但是非常诡异的是，BCC的分叉存活，这股反对力量没有任何人站出来承认其投入算力使BCC存活，从动机上分析，厌恶所谓大区块路线的群体，也没有必要保持BCC的存活，而在此之后的各种迹象，反BCH的社群对于BCC更多的只是观望，并没有迅速组织起实际的力量投入，也证明了这一点。
+
+如果不是BCH的反对派，除此之外，谁有动机？投入神秘的算力使BCC存活下来呢？我们进一步猜测这股力量来自BCH社区，而且是其中的实权力量，因为某种原因，不便于透露自身身份，所以在确认原链复活后默默撤离。在BCC分叉之后的36个小时，BitcoinABC开发组发布了一条公告，宣布了BCC继续出块，这条公告后来被删除了，但当时JIHAN WU转发了该公告，并保留在twitter上至今（https://twitter.com/JihanWu/status/930773631763755008），这是首先披露BCC出块存活的最原始信息。JIHAN WU为什么如此着急公告此事，我们当然也不得而知，但在此之后，这条消息迅速传播开来，进一步推动了原链复活的关注度。
+
+这不禁让人猜测JIHAN WU有可能是BCC复活的背后推手，在没有其它依据的情况下，其实际动机也许耐人寻味。
+
+
