--- a/_posts/2019-07-01-btcDAO.markdown
+++ b/_posts/2019-07-01-btcDAO.markdown
@@ -1,7 +1,7 @@
 ---
 layout: post
 title:  "比特币的去中心化方法论"
-date:   2019-06-29
+date:   2019-07-01
 categories: 比特币理论研究
 tags: BTC 理论研究 去中心化 社区化 庞氏骗局 社会化协作 社会化生产 DAO
 ---
@@ -160,20 +160,25 @@ It's money！
 
 # 去中心化的部署方式
 
+## 确定性的目标和执行路线
+
+一个清晰、明确、简洁的目标是去中心化项目的首要要素。比特币的启动来源于【点对点电子现金】这个概念，大部分早期的接触者，均很清楚比特币要达致什么样的效果，虽然它有复杂的技术实现过程，但使很多不懂技术的人，也能够理解且参与其中。比特币启动时有两个确定性，其一，挖矿有奖励。其二，货币的应用价值就是流通。很多持有比特币的人一直在自发推广比特币，促进它的流通，最早比特币的使用场景是购买披萨饼，因此有人说比特币产生了庞氏骗局的特征。不管怎么说，参与者能够清晰地理解项目的目标和路线，并且产生执行力，是部署去中心化项目的第一步。而大部分的项目并没有做到这一点，确定性很弱，大部分人作为旁观者，不知所措，且项目设计完全由小范围内的技术团队主导，缺乏充分的资源开源，只能成为实质上的中心化的项目。
+
 ## 多变的分层参考架构
 
-技术是有一个分层的架构设计，但是一成不变的分层架构，并不适应去中心化的实现，
+技术是有一个分层的架构设计，但是由少数人制定的一成不变的分层架构，并不适应去中心化的实现。单一分层架构无法充分地利用开源社区的资源。以BCH为例，对闪电网络是拒绝的，对弹性区块大小是拒绝的，对侧链也是拒绝的，也无法容纳分片的实现，单一地往链上灌注一切应用，限制了其扩展性、灵活性。作为去中心化的项目，包容多变的分层技术参考架构，乃至非技术的执行参考架构，可以使项目呈现多样性进化特征，全方位的探索，扩大影响范围，并增加达成目标的可能性。
 
 ## 人人可参与的互联网
 
-人人可参与的互联网，使互联网重新变得有趣。
+人人可参与的互联网，使互联网重新变得有趣。设立门槛，不够开放性，信息封闭不透明，暗箱操作，不当的利益分配方式，破坏价值而非守护价值，利益所得者与价值贡献毫不对称，等等，都会使项目迅速丧失活力、腐败、毫无生气。很多融得巨资的伪去中心化项目，因为缺乏公平的运行体制，核心协议层面由少数人操纵，导致力量涣散迅速腐败，并最终走向失败。
 
 ## 由利益群体推动的开发需求
 
-## 颗粒化的知识图谱
+所有的开源资源都可以为项目所用，没有必要重复制造轮子，去中心化的项目能够完全融入开源社群，可以获得最充沛的技术资源和方法，这是一开始就要考虑好的战略布局。过度研发导致失败的案例，在商业历史上比比皆是，以前SUN公司从CPU设计研发开始一直贯穿到鼠标、键盘，产品体系从瘦客户机一直到工作站、服务器、小型机，甚至其拥有最大的商业化UNIX系统（Solaris)，收购了JAVA和MYSQL，而现在该公司的总部现已经为Facebook所有。去中心化项目可以容纳广泛的研发，由社会化承担研发成本，但不意味着社区的资源是无穷的，特别是早期阶段，过多地投入无法闭环的技术应用场景，会消耗浪费资源且导致项目进展看起来遥遥无期。由具体闭环的应用场景或对应商业实体驱动，推动开发的需求，可以凝聚社区力量，迅速创造可见的效果。这解释了，比特币第一阶段的开发成功的应用项目是交易所和矿池，而后是媒体、合约平台，而侧链及闪电网则进展并没有很快。
 
+## 充分开源的协作知识图谱
 
-
+去中心化的生产本质是知识的组合，使协作的知识流动起来，社区项目的知识图谱要不断构建完善，并完全开放。
 
 
 
